@@ -1,5 +1,6 @@
 package com.skillmatch.user.service;
 
+import com.skillmatch.config.S3Properties;
 import com.skillmatch.user.exception.AvatarStorageException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -9,24 +10,28 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
+import software.amazon.awssdk.core.ResponseInputStream;
+import software.amazon.awssdk.core.exception.SdkException;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.DeleteObjectRequest;
+import software.amazon.awssdk.services.s3.model.GetObjectRequest;
+import software.amazon.awssdk.services.s3.model.GetObjectResponse;
+import software.amazon.awssdk.services.s3.model.PutObjectRequest;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 import java.util.UUID;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
-@ConditionalOnProperty(name = "app.storage.provider", havingValue = "local", matchIfMissing = true)
-public class LocalAvatarStorageService implements AvatarStorageService {
+@ConditionalOnProperty(name = "app.storage.provider", havingValue = "s3")
+public class S3AvatarStorageService implements AvatarStorageService {
 
+    private final S3Client s3Client;
+    private final S3Properties s3Properties;
     private final AvatarImageProcessor imageProcessor;
-
-    @Value("${app.avatar.storage-path}")
-    private String storagePath;
 
     @Value("${app.avatar.max-file-size-mb:5}")
     private int maxFileSizeMb;
@@ -56,15 +61,18 @@ public class LocalAvatarStorageService implements AvatarStorageService {
 
             String fileId = UUID.randomUUID().toString();
             String storageKey = "users/" + userId + "/avatars/" + fileId + ".jpg";
-            Path storageDir = Paths.get(storagePath);
-            Path destination = storageDir.resolve(storageKey);
-            
-            Files.createDirectories(destination.getParent());
-            Files.write(destination, imageBytes);
+
+            PutObjectRequest putObjectRequest = PutObjectRequest.builder()
+                    .bucket(s3Properties.getBucket())
+                    .key(storageKey)
+                    .contentType("image/jpeg")
+                    .build();
+
+            s3Client.putObject(putObjectRequest, RequestBody.fromBytes(imageBytes));
 
             return storageKey;
 
-        } catch (IOException e) {
+        } catch (SdkException e) {
             log.error("Failed to store avatar for user {}", userId, e);
             throw new AvatarStorageException("Failed to store avatar image", e);
         }
@@ -74,11 +82,15 @@ public class LocalAvatarStorageService implements AvatarStorageService {
     public void deleteAvatar(String storageKey) {
         if (storageKey == null || storageKey.isBlank()) return;
         if (storageKey.startsWith("http")) return;
-        
-        Path filePath = Paths.get(storagePath).resolve(storageKey);
+
         try {
-            Files.deleteIfExists(filePath);
-        } catch (IOException e) {
+            DeleteObjectRequest deleteObjectRequest = DeleteObjectRequest.builder()
+                    .bucket(s3Properties.getBucket())
+                    .key(storageKey)
+                    .build();
+
+            s3Client.deleteObject(deleteObjectRequest);
+        } catch (SdkException e) {
             log.warn("Failed to delete avatar file {}", storageKey, e);
         }
     }
@@ -86,13 +98,17 @@ public class LocalAvatarStorageService implements AvatarStorageService {
     @Override
     public Optional<byte[]> loadAvatar(String storageKey) {
         if (storageKey == null || storageKey.isBlank()) return Optional.empty();
-        Path filePath = Paths.get(storagePath).resolve(storageKey);
-        if (!Files.exists(filePath)) {
-            return Optional.empty();
-        }
+
         try {
-            return Optional.of(Files.readAllBytes(filePath));
-        } catch (IOException e) {
+            GetObjectRequest getObjectRequest = GetObjectRequest.builder()
+                    .bucket(s3Properties.getBucket())
+                    .key(storageKey)
+                    .build();
+
+            try (ResponseInputStream<GetObjectResponse> response = s3Client.getObject(getObjectRequest)) {
+                return Optional.of(response.readAllBytes());
+            }
+        } catch (SdkException | IOException e) {
             log.error("Failed to read avatar file {}", storageKey, e);
             return Optional.empty();
         }
